# Jersey

./: .gitignore  README.md
app/: bun.lockb  package.json
app/src/app/: _app.tsx  layout.tsx  page.tsx  providers.tsx
app/src/components/: NFTForm.tsx  providers.tsx
app/src/utils/: MusicNFTClient.ts  constants.ts  pinata.ts
program/: Cargo.toml
program/src/: lib.rs
