[package]
name = "music-nft-program"
version = "0.1.0"
edition = "2021"
description = "Music NFT Platform on Solana"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "=1.17.0"
borsh = "=0.10.3"
thiserror = "=1.0.49"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.1.3", features = ["no-entrypoint"] }
ahash = "=0.8.6"

[workspace]
members = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dev-dependencies]
solana-program-test = "=1.17.0"
solana-sdk = "=1.17.0"